kubernetes/namespaces/default/grafana/deployment-grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:11.0.0-preview
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
             cpu: 200m
             memory: 100Mi
            limits:
              cpu: 300m
              memory: 250Mi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-volume
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: grafana-volume
          persistentVolumeClaim:
            claimName: grafana-storage
      securityContext:
        fsGroup: 2000
        runAsUser: 1000
        runAsNonRoot: true
