kubernetes/namespaces/default/grafana/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 3000
  selector:
    app: grafana
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
spec:
  ports:
    - port: 8081
  selector:
    app: grafana-image-renderer
